# trimesh

./: Cargo.toml  README.md  build.rs
ode/lib/: ode.def  ode.lib
src/: lib.rs  polyhedron.rs  tmm.rs
src/polyhedron/: c60.rs  capsule.rs  cone.rs  cube.rs  cylinder.rs  dodecahedron.rs  icosahedron.rs  octa.rs  pin.rs  pipe.rs  revolution.rs  sphere.rs  tetra.rs  torus.rs
