[package]
name = "trimesh"
version = "0.3.3" # change with html_root_url in lib.rs
edition = "2021"
authors = ["nomissbowling <nomissbowling@yahoo.co.jp>"]

description = "Polyhedron on the ODE (Open Dynamics Engine) trimesh for Rust"
keywords = ["opengl", "dynamics", "c60", "fullerene", "3D"]
categories = ["simulation", "rendering", "science", "external-ffi-bindings"]
license = "MIT"

documentation = "https://docs.rs/trimesh/"
homepage = "https://crates.io/crates/trimesh"
repository = "https://github.com/nomissbowling/trimesh"

readme = "README.md"

#build = "build.rs"

[dependencies]
polyhedron-faces = { version = "0.3" }
Fullerene = { version = "0.3" }

anyslot = { version = "0.1" }

num = { version = "0.4" } # "0.4.1"

asciiz = { version = "0.1" }

oyk = { version = "1.0" }

home = { version = "=0.5.5" } # cc(1.0.79)/bindgen(0.65.1) requires home(0.5.5)

[build-dependencies]
cc = "=1.0.79"
bindgen = "=0.65.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
